feat: implement Shizuku-based package uninstallation and fix RTL transition positioning logic